projects/compiler/test/parser/invocation_error_no_rparen.out
Error at %FILE_NAME%:1:6
Unexpected token '}', expected one of ',', ')':
  |  a.b(1}
          ^